# video-gen-mcp-monolithic

./: .env.example  .gitignore  CLAUDE.md  FASTMCP_MIGRATION_SUMMARY.md  IMPLEMENTED_IMPROVEMENTS.md  IMPROVEMENT_PROPOSALS.md  NEXT_STEPS_UPDATE_SUMMARY.md  QUEUING_IMPLEMENTATION_PROPOSAL.md  QUICK_WINS.md  README.md  SETUP.md  YOUTUBE_SETUP.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_audio_duration_fix.py  test_direct.py  test_end_video.py  test_fal_fix.py  test_project_creation.py  test_queue.py  test_server.py  test_windows_compat.py
src/mcp_server/: __init__.py  constants.py  server.py
src/mcp_server/config/: __init__.py  platforms.py  pricing.py  settings.py
src/mcp_server/models/: __init__.py  queue_status.py  schemas.py
src/mcp_server/prompts/: __init__.py  cinematic_photography_guide.py  list_video_agent_capabilities.py  script_to_scenes.py  video_creation_wizard.py
src/mcp_server/resources/: __init__.py  get_cost_breakdown.py  get_current_project.py  get_platform_specs.py  get_project_timeline.py  get_queue_status.py
src/mcp_server/services/: __init__.py  asset_storage.py  fal_client.py  ffmpeg_wrapper.py  file_upload_cache.py  youtube_service.py
src/mcp_server/tools/: youtube_search.py
src/mcp_server/tools/assembly/: __init__.py  add_audio_track.py  assemble_video.py  download_assets.py  export_final_video.py
src/mcp_server/tools/generation/: __init__.py  generate_image_from_image.py  generate_image_from_image_batch.py  generate_image_from_text.py  generate_music.py  generate_speech.py  generate_video_from_image.py  generate_video_from_image_batch.py
src/mcp_server/tools/project/: __init__.py  add_scene.py  create_project.py  list_projects.py
src/mcp_server/tools/queue/: __init__.py  cancel_task.py  get_queue_status.py
src/mcp_server/tools/utility/: __init__.py  analyze_script.py  analyze_youtube_video.py  get_youtube_categories.py  suggest_scenes.py  (+3 more)
src/mcp_server/utils/: __init__.py  cinematic_prompts.py  error_helpers.py  image_helpers.py
